<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:foreground="?attr/selectableItemBackground"
    android:orientation="vertical"
    app:cardCornerRadius="@dimen/margin"
    app:cardElevation="2dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    app:contentPadding="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageCountryFlag"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/pl"/>

        <TextView
            android:id="@+id/textCountryName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@id/barrier"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageCountryFlag"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Poland"/>

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="imageCountryFlag,textCountryName"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/textNewCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/label_new_cases"
            app:layout_constraintBottom_toTopOf="@+id/textNewDeaths"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/numberNewCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/numberNewDeaths"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/textNewCases"
            app:layout_constraintTop_toBottomOf="@+id/barrier"
            tools:text="500" />

        <TextView
            android:id="@+id/textNewDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/label_new_deaths"
            app:layout_constraintBottom_toTopOf="@+id/textNewRecovered"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNewCases" />

        <TextView
            android:id="@+id/numberNewDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@id/numberNewRecovered"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/textNewDeaths"
            app:layout_constraintTop_toBottomOf="@+id/numberNewCases"
            tools:text="1000" />

        <TextView
            android:id="@+id/textNewRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/label_new_recovered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textNewDeaths" />

        <TextView
            android:id="@+id/numberNewRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toEndOf="@+id/textNewRecovered"
            app:layout_constraintTop_toBottomOf="@+id/numberNewDeaths"
            tools:text="0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/textTotalCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/label_total_cases"
            app:layout_constraintBottom_toTopOf="@+id/textTotalDeaths"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/barrier" />

        <TextView
            android:id="@+id/numberTotalCases"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@+id/numberTotalDeaths"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textTotalCases"
            app:layout_constraintTop_toBottomOf="@+id/barrier"
            tools:text="10000" />

        <TextView
            android:id="@+id/textTotalDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/label_total_deaths"
            app:layout_constraintBottom_toTopOf="@+id/textTotalRecovered"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textTotalCases" />

        <TextView
            android:id="@+id/numberTotalDeaths"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            app:layout_constraintBottom_toTopOf="@id/numberTotalRecovered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textTotalDeaths"
            app:layout_constraintTop_toBottomOf="@+id/numberTotalCases"
            tools:text="4000" />

        <TextView
            android:id="@+id/textTotalRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            android:text="@string/label_total_recovered"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/textTotalDeaths" />

        <TextView
            android:id="@+id/numberTotalRecovered"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginEnd="@dimen/margin"
            android:layout_marginBottom="@dimen/margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textTotalRecovered"
            app:layout_constraintTop_toBottomOf="@+id/numberTotalDeaths"
            tools:text="0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
